# Rafka

./: .gitignore  Cargo.toml  ECOSYSTEM_PLAN.md  PHASES.md  README.md  RESEARCH_SOURCES.md  SPRINT_PLAN.md  TEST_PLAN.md  TODO.md
.github/workflows/: ci.yml  extended-tests.yml  perf.yml  release.yml  security.yml
crates/broker/: Cargo.toml
crates/broker/src/: async_transport.rs  authorization.rs  kraft.rs  lib.rs  metrics.rs  replication.rs  replication_control_plane.rs  security.rs  transport.rs
crates/broker/tests/: acl_rbac_integration.rs  async_transport_integration.rs  behavior.rs  kraft_quorum_integration.rs  metadata_publishing_integration.rs  persistent_routing.rs  persistent_routing_edges.rs  replication_integration.rs  security_transport_integration.rs  transport_integration.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/client/tests/: client_integration.rs
crates/codegen/: Cargo.toml
crates/codegen/src/: lib.rs  main.rs
crates/coordinator/: Cargo.toml
crates/coordinator/src/: classic.rs  group.rs  lib.rs  offsets.rs  transaction.rs
crates/coordinator/tests/: classic_group_integration.rs  group_lifecycle_complex.rs  real_world_patterns.rs  transaction_edge_cases.rs  transaction_integration.rs  workload_integration.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: api_registry.rs  generated_api_registry.rs  generated_messages.rs  lib.rs  messages.rs
crates/storage/: Cargo.toml
scripts/: check_behavior.sh  check_jvm_compat.sh  generate_protocol_messages.sh  generate_protocol_registry.sh  run_perf_harness.sh
(+11 files in other folders)
